[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sprite-tools"
version = "0.1.0"
description = "CLI tools for transferring files to/from Sprite environments"
requires-python = ">=3.9"

[project.scripts]
sprite-get = "sprite_tools.get:main"
sprite-put = "sprite_tools.put:main"
sprite-ls = "sprite_tools.ls:main"
sprite-rm = "sprite_tools.rm:main"
sprite-cat = "sprite_tools.cat:main"
sprite-cp = "sprite_tools.cp:main"
sprite-mv = "sprite_tools.mv:main"
sprite-chmod = "sprite_tools.chmod:main"
